@@ -29,6 +29,8 @@
 #include <isc/strerror.h>
 #include <isc/util.h>
 
+#include "lib_strbuf.h"
+
 /*
  * Forward declarations
  */
@@ -112,14 +114,15 @@ FormatError(int error) {
 		*pch = '\0';
 	}
 
-	/* strip any trailing CR/LF */
+	/* strip any trailing CR/LF and spaces */
 	if (lpMsgBuf != NULL) {
 		last = strlen(lpMsgBuf);
 		if (last > 0) {
 			--last;
 		}
 		while ('\n' == lpMsgBuf[last] ||
-		       '\r' == lpMsgBuf[last]) {
+		       '\r' == lpMsgBuf[last] ||
+		       ' '  == lpMsgBuf[last]) {
 
 			lpMsgBuf[last] = '\0';
 			if (last > 0) {
@@ -140,27 +143,31 @@ char *
 NTstrerror(int err, BOOL *bfreebuf) {
 	char *retmsg = NULL;
 
-	/* Copy the error value first in case of other errors */	
-	DWORD errval = err; 
-
 	*bfreebuf = FALSE;
 
 	/* Get the Winsock2 error messages */
-	if (errval >= WSABASEERR && errval <= (WSABASEERR + 1999)) {
-		retmsg = GetWSAErrorMessage(errval);
-		if (retmsg != NULL)
-			return (retmsg);
+	/* DLH this may not be needed, FormatError/FormatMessage may handle Winsock error codes */
+	if (err >= WSABASEERR && err <= (WSABASEERR + 1999)) {
+		retmsg = GetWSAErrorMessage(err);
 	}
 	/*
 	 * If it's not one of the standard Unix error codes,
 	 * try a system error message
 	 */
-	if (errval > (DWORD) _sys_nerr) {
-		*bfreebuf = TRUE;
-		return (FormatError(errval));
-	} else {
-		return (strerror(errval));
+	if (NULL == retmsg) {
+		if (err > _sys_nerr) {
+			*bfreebuf = TRUE;
+			retmsg = FormatError(err);
+		} else {
+			retmsg = lib_getbuf();
+			if (0 != strerror_s(retmsg, LIB_BUFLENGTH, err)) {
+				snprintf(retmsg, LIB_BUFLENGTH,
+					 "Unknown error number %d/0x%x",
+					 err, err);
+			}
+		}
 	}
+	return retmsg;
 }
 
 /*
